[gd_scene load_steps=17 format=3 uid="uid://dnbt3ghl0rc3a"]

[ext_resource type="Texture2D" uid="uid://cckfyx63x0b64" path="res://scenes/game_object/basic_enemy/basic_enemy.png" id="1_e1s3k"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/basic_enemy.gd" id="1_e7hsr"]
[ext_resource type="PackedScene" uid="uid://dmr2ppcxx483h" path="res://scenes/component/health_component.tscn" id="2_i40oq"]
[ext_resource type="PackedScene" uid="uid://c46qqup54r612" path="res://scenes/component/vial_drop_component.tscn" id="3_fbbtf"]
[ext_resource type="PackedScene" uid="uid://c5nvs2e0ryb2e" path="res://scenes/component/velocity_component.tscn" id="4_3mf86"]
[ext_resource type="PackedScene" uid="uid://bvpf2h42e8g7m" path="res://scenes/component/hurt_box_component.tscn" id="4_of5ab"]
[ext_resource type="PackedScene" uid="uid://drtda6xctenh3" path="res://scenes/component/death_component.tscn" id="4_vlqsw"]
[ext_resource type="PackedScene" uid="uid://bdnpgwxdxbrbo" path="res://scenes/component/hit_flash_component.tscn" id="5_ki05i"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_y6t78"]
[ext_resource type="PackedScene" uid="uid://cghtd6dqmthd5" path="res://scenes/component/random_audio_stream_player_2d_component.tscn" id="11_6evoj"]

[sub_resource type="Animation" id="Animation_5lr51"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pq743"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0uesj"]
_data = {
"RESET": SubResource("Animation_5lr51"),
"walk": SubResource("Animation_pq743")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oxne2"]
resource_local_to_scene = true
shader = ExtResource("6_y6t78")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lso82"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7ubyc"]
radius = 5.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_e7hsr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_0uesj")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_i40oq")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_fbbtf")]
drop_percent = 0.35
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_3mf86")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_ki05i")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_oxne2")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_vlqsw")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioStreamPlayerComponent" parent="." instance=ExtResource("11_6evoj")]
max_distance = 300.0

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_of5ab")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_lso82")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_e1s3k")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_7ubyc")
